--- a/views/index.erb
+++ b/views/index.erb
@@ -3,18 +3,44 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<title>Weg Guesser</title>
+		<style type="text/css">
+		body{
+			background: <%= proximity %>;
+		}
+		#wrap h1,
+		#wrap h2{
+			text-align: center;
+		}
+		#wrap form{
+			max-width: 256px;
+			margin: 0 auto;
+		}
+		#wrap a{
+			display: block;
+			max-width: 128px;
+			margin: 0 auto;
+		}
+		#wrap{
+			padding-top: 32px;
+			background: #eee;
+			width: 512px;
+			height: 512px;
+			margin: 64px auto;
+		}
+		</style>
 	</head>
 	<body>
 		<div id="wrap">
 			<h1>Web Guesser</h1>
-			<% if ! correct %>
+			<% if correct || cheat %>
 				<h2>Secret number: <%= number %></h2>
 			<% end %>
 			<% if guess != '' %>
 				<h2>Your guess: <%= guess %></h2>
+				<h2>Guesses left: <%= $guesses.to_s %></h2>
 			<% end %>
 			<h2><%= response %></h2>
-			<% if ! correct %>
+			<% if ! correct && $guesses > 0 %>
 				<form>
 					<input type="text" name="guess"/>
 					<input type="submit" value="Guess"/>
